# auto_muter

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  fix_glibcxx.sh  index.html  pyproject.toml  setup_script.sh
.github/workflows/: build_and_package.yml
auto_muter/: app.py  audio_controller.py  audio_muter.py  gui.py  logger.py  main.py  package.py  utils.py
tests/: conftest.py  test_audio_controller.py  test_audio_muter.py  test_gui.py  test_main.py  test_package.py  test_utils.py  unit.py
