[project]
name = "auto-muter"
version = "0.1.0"
description = ""
authors = [
    {name = "zaksaiplayground@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "keyboard",
    "pynput"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
