[project]
name = "auto-muter"
version = "0.1.0"
description = ""
authors = [
    {name = "zaksaiplayground@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10, <3.14"
dependencies = [
    "numpy",
    "keyboard",
    "pycaw (>=20240210,<20240211)",
    "pyaudio (>=0.2.14,<0.3.0)",
    "pyinstaller (>=6.13.0,<7.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "python-semantic-release (>=9.21.0,<10.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "auto_muter.package:install"
build_and_package = "auto_muter.package:build_and_package"
auto-muter = "auto_muter.main:main"

[tool.semantic_release]
version_variable = "pyproject.toml:project.version"
branch = "main"
upload_to_pypi = false
upload_to_release = false
